# Model-X

./: .gitattributes  .gitignore  Dockerfile  QUICKSTART.md  README.md  app.py  create_visualization.py  debug_path.py  debug_runner.py  inspect_chroma.py  langgraph.json  main.py  pyproject.toml  quick_test.py  requirements.txt  run_tests.py  start.sh  start_services.ps1  start_services.sh  test_all_tools.py  test_ml_pipelines.py  test_multilingual_anomaly.py  test_news_tools.py  test_social_tools.py  test_trending_integration.py  test_vectorization_integration.py  test_vectorizer_and_anomaly.py  test_weather_tools.py  tool_test_results.json  trace_import.py  vectorizer_graph_flow.txt  visualize_trending.py
.github/workflows/: deploy-backend.yaml  deploy-frontend.yaml  test.yml
airflow/: Dockerfile  README.md  airflow.env.example  requirements.txt
airflow/dags/: anomaly_detection_dag.py  currency_prediction_dag.py  stock_prediction_dag.py  weather_prediction_dag.py
frontend/app/: globals.css
models/anomaly-detection/: download_models.py  main.py  requirements.txt
models/currency-volatility-prediction/: main.py  setup.py
models/stock-price-prediction/: README.md  app.py  main.py  pyproject.toml  requirements.txt
models/weather-prediction/: main.py  pyproject.toml
scripts/: scrape_weather_data.py  start_backend.sh  train_ml_models.py
src/: rag.py
src/api/: vectorization_api.py
src/config/: __init__.py  intel_config.json  langsmith_config.py
src/graphs/: RogerGraph.py  combinedAgentGraph.py  dataRetrievalAgentGraph.py  economicalAgentGraph.py  intelligenceAgentGraph.py  meteorologicalAgentGraph.py  (+3 more)
tests/: conftest.py
(+487 files in other folders)
